<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3"> <!-- Changed from 2 to 3 to fix for member_of_group tag-->
  <name>msg_srv_ex</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="chuong19111996@gmail.com">chuong</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  
  <!-- GENERATING MSG & SRV -->
  <!-- LINK: https://docs.ros.org/en/foxy/Tutorials/Beginner-Client-Libraries/Custom-ROS2-Interfaces.html-->
  <!-- Because the interfaces rely on rosidl_default_generators for generating language-specific code, you need to declare a 
  dependency on it. -->
  <build_depend>rosidl_default_generators</build_depend>

  <!-- The <exec_depend> tag is used to specify runtime or execution-stage dependencies and the rosidl_interface_packages 
  is the name of the dependency group to which the package belongs, declared using the <member_of_group> tag.-->
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
  
  

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
